# mysql_mcp_server_pro

./: Dockerfile  LICENSE  README-zh.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: server.py
src/handles/: execute_sql.py  get_db_health_index_usage.py  get_db_health_running.py  get_table_desc.py  get_table_lock.py  get_table_name.py
src/mysql_mcp_server_pro/: cli.py  server.py
src/mysql_mcp_server_pro/config/: .env  dbconfig.py
src/mysql_mcp_server_pro/exception/: exceptions.py
src/mysql_mcp_server_pro/handles/: __init__.py  execute_sql.py  get_db_health_index_usage.py  get_db_health_running.py  get_table_desc.py  get_table_index.py  get_table_lock.py  get_table_name.py  optimize_sql.py  use_prompt_queryTableData.py
src/mysql_mcp_server_pro/oauth/: __init__.py  config.py  middleware.py  routes.py  token_handler.py
src/mysql_mcp_server_pro/prompts/: AnalysisMySqlIssues.py  QueryTableData.py
src/mysql_mcp_server_pro/templates/: login.html
src/mysql_mcp_server_pro/utils/: __init__.py  database_pool.py  execute_sql_util.py
src/prompts/: AnalysisMySqlIssues.py  BasePrompt.py  QueryTableData.py  __init__.py
